--- a/deploy/nginx/conf.d/hyuga.conf
+++ b/deploy/nginx/conf.d/hyuga.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name b.com;
+    server_name hyuga.io;
     location / {
         root /var/www;
         index index.html;
@@ -8,13 +8,13 @@ server {
 }
 server {
     listen 80;
-    server_name *.b.com;
+    server_name *.hyuga.io;
 
     location / {
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://webapp:5000;
+        proxy_pass http://hyuga:5000;
     }
 }
