--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ gunicorn==20.0.4
 peewee==3.13.1
 PyJWT==1.7.1
 PyMySQL==0.9.3
-python-dotenv==0.10.3
 redis==3.3.11
 shortuuid==0.5.0
+cryptography==2.8
