deploy: 解决部署 React 的 Browser 路由模式

--- a/deploy/nginx/conf.d/hyuga.conf
+++ b/deploy/nginx/conf.d/hyuga.conf
@@ -4,6 +4,9 @@ server {
     location / {
         root /var/www;
         index index.html;
+        try_files $uri $uri/ /index.html;
+        autoindex on;
+        gzip on;
     }
 }
 server {
