deploy: redis rdb 持久化

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,10 @@ version: "3"
 services:
   redis:
     image: "redis:alpine"
+    container_name: hyuga_redis
     restart: always
+    volumes:
+      - "./deploy/redis/data:/data"
 
   mysql:
     image: mysql
