--- a/.env-example
+++ b/.env-example
@@ -1,6 +1,6 @@
 APP_ENV=[production/development]
 
-REDIS_SERVER=[localhost]
+REDIS_SERVER=[localhost/redis]
 REDIS_PORT=[6379]
 
 DOMAIN=[hyuga.io]
