--- a/deploy/nginx/nginx-hyuga.conf
+++ b/deploy/nginx/nginx-hyuga.conf
@@ -17,6 +17,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_pass http://localhost:5000;
+        proxy_pass http://web:5000;
     }
 }
