--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,16 @@
 .vscode/
 dump.rdb
 .DS_Store
+.env.local
+.env.*.local
+node_modules
+/dist
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
