--- a/.gitignore
+++ b/.gitignore
@@ -7,20 +7,22 @@
 
 # Test binary, built with `go test -c`
 *.test
+conf/config-test.yml
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
-.env
-.vscode/
 dump.rdb
 .DS_Store
-.env.local
-.env.*.local
 node_modules
 /dist
+
+# local env files
+.env
+.env.local
+.env.*.local
 
 # Log files
 npm-debug.log*
@@ -30,3 +32,9 @@ pnpm-debug.log*
 
 # Editor directories and files
 .idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
