--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,26 @@ services:
     image: "redis:alpine"
     container_name: hyuga_redis
     restart: always
+    environment:
+      - SET_CONTAINER_TIMEZONE=true
+      - CONTAINER_TIMEZONE=Asia/Shanghai
     volumes:
       - "./deploy/redis:/data"
+      - /etc/localtime:/etc/localtime:ro
 
   hyuga:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: hyuga
+    environment:
+      - SET_CONTAINER_TIMEZONE=true
+      - CONTAINER_TIMEZONE=Asia/Shanghai
     ports:
       - 80:8000
       - "53:53/udp"
+    restart: always
     depends_on:
       - "redis"
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
