--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "sass-loader": "^8.0.2",
     "vue": "^2.6.10",
     "vue-axios": "^3.3.7",
-    "vue-clipboard2": "^0.3.3"
+    "vue-clipboard2": "^0.3.3",
+    "vue-cookies": "^1.7.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.1",
