--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -12,7 +12,7 @@ db:
   address: "127.0.0.1:3306"
   username: "root"
   password: "12345678"
-  database: "anylog"
+  database: "hyuga"
   charset: "utf8"
 
 oob:
