--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,53 +1,27 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "ant-design-vue": "^1.7.8",
-    "axios": "^0.23.0",
-    "core-js": "^3.4.3",
-    "dayjs": "^1.10.7",
-    "sass": "^1.26.5",
-    "sass-loader": "^8.0.2",
-    "vue": "^2.6.10",
-    "vue-axios": "^3.3.7",
-    "vue-clipboard2": "^0.3.3",
-    "vue-cookies": "^1.7.4"
+    "element-plus": "^2.3.4",
+    "vue": "^3.2.37",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.1.1",
-    "@vue/cli-plugin-eslint": "^4.1.1",
-    "@vue/cli-service": "^4.1.1",
-    "babel-eslint": "^10.0.3",
-    "babel-plugin-import": "^1.12.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "less": "^3.8.1",
-    "less-loader": "^5.0.0",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "@babel/types": "^7.18.10",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "typescript": "^4.6.4",
+    "unplugin-auto-import": "^0.15.3",
+    "unplugin-vue-components": "^0.24.1",
+    "vite": "^3.0.7",
+    "vue-clipboard3": "^2.0.0",
+    "vue-tsc": "^0.39.5",
+    "vue3-cookies": "^1.0.6"
+  }
 }
